--- a/QuickBuy.Web/ClientApp/src/app/loja/pesquisa/loja.pesquisa.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/loja/pesquisa/loja.pesquisa.component.html
@@ -1,15 +1,18 @@
-<div class="container">
+<div *ngIf="!produtos">Listando todos os produtos..</div>
+
+<div class="container" *ngIf="produtos">
   <div class="row">
     <div class="col-md-4 mb-4" *ngFor="let p of produtos">
-      <div class="card">
-        <img class="card-top" src="../../../../../arquivos/there-are-_2020115111247.png}"
-             style="width:200px; height:200px;" />
-        <div class="card-body">
-          <h5 class="card-title">{{p.nome}}</h5>
-          <div class="card-text">{{p.descricao}}</div>
-          <h5 class="h5">{{p.preco}}</h5>
+      <a (click)="abrirProduto(p)" style="cursor:pointer;">
+        <div class="card">
+          <img class="card-top" src="../../../../../arquivos/there-are-_2020115111247.png}"
+               style="width:200px; height:200px;" />
+          <div class="card-body">
+            <div class="card-text">{{p.descricao | truncate: 40}}</div>
+            <h5 class="h5">{{p.preco}}</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
   </div>
 
