--- a/QuickBuy.Web/ClientApp/src/app/produto/produto.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/produto/produto.component.html
@@ -29,10 +29,14 @@
        }"
        [(ngModel)]="produto.descricao"
        #descricao="ngModel"
+       minlength="30"
        required />
 <div class="invalid-feedback mb-2" *ngIf="descricao.invalid && (descricao.dirty || descricao.touched)">
   <div *ngIf="descricao.errors.required">
     Descrição do produto é de preenchimento obrigatório
+  </div>
+  <div *ngIf="descricao.errors.minlength">
+    Campo deve ter no mínimo 30 caracteres
   </div>
 </div>
 
