--- a/QuickBuy.Web/ClientApp/src/app/loja/pesquisa/loja.pesquisa.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/loja/pesquisa/loja.pesquisa.component.html
@@ -5,7 +5,7 @@
     <div class="col-md-4 mb-4" *ngFor="let p of produtos">
       <a (click)="abrirProduto(p)" style="cursor:pointer;">
         <div class="card">
-          <img class="card-top" src="../../../../../arquivos/there-are-_2020115111247.png}"
+          <img class="card-top" src="../../../../../arquivos/{{p.nomeArquivo}}"
                style="width:200px; height:200px;" />
           <div class="card-body">
             <div class="card-text">{{p.descricao | truncate: 40}}</div>
