usuario service and login updates

--- a/QuickBuy.Web/ClientApp/src/app/usuario/login/login.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/usuario/login/login.component.html
@@ -17,21 +17,23 @@
            required/>
 
     <label for="inputSenha" class="sr-only">Senha</label>
-    <input type="password" id="inputPassword"
+    <input type="password" id="inputSenha"
            name="senha" placeholder="Senha"
            class="form-control mb-2"
+           #senha="ngModel"
+           [(ngModel)]="usuario.senha"
+           senha
            [ngClass]="{
             'is-invalid':senha.invalid && (senha.dirty || senha.touched),
             'is-valid':senha.valid && (senha.dirty || senha.touched)
            }"
-           [(ngModel)]="usuario.senha"
-           #senha="ngModel"
-           senha
            required
            />
 
-    <button class="btn btn-primary btn-block mb-2" type="submit" (click)="entrar()  ">Entrar</button>
+    <button class="btn btn-primary btn-block mb-2" type="submit" (click)="entrar()">Entrar</button>
+    <div class="alert alert-danger" *ngIf="mensagem">
+      {{mensagem}}
+    </div>
     <img src="..\\assets\\img\\quick-b-logo.jpg" />
-    <div class="alert alert-primary" role="alert" *ngIf="usuarioAutenticado">Usuario Autenticado!</div>
   </form>
 </div>
