--- a/QuickBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,8 +20,11 @@
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" [routerLink]='["/pesquisar-produto"]'>Produto</a>
           </li>
-          <li class="nav-item" [routerLinkActive]='["link-active"]'>
-            <a class="nav-link text-dark" [routerLink]='["/entrar"]'>Login</a>
+          <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="!usuarioLogado()">
+            <a class="nav-link text-dark" [routerLink]='["/entrar"]'>Entrar</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="usuarioLogado()">
+            <a class="nav-item nav-link text-dark" [routerLink]='["/sair"]' (click)="sair()">Sair</a>
           </li>
           <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="temItensCarrinhoCompra()">
             <a class="nav-link text-dark" [routerLink]='["/loja-efetivar"]'>
