--- a/QuickBuy.Web/ClientApp/src/app/usuario/cadastro/cadastro.usuario.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/usuario/cadastro/cadastro.usuario.component.html
@@ -1,11 +1,35 @@
 <div class="text-center">
   <form class="form-signin">
 
-    <h1 class="h4 mb-2">Login do Cliente</h1>
+    <h1 class="h4 mb-2">Criar Conta</h1>
+
+    <label for="inputNome" class="sr-only">Nome</label>
+    <input type="text" id="inputNome"
+           name="nome" placeholder="Nome"
+           class="form-control mb-2"
+           [ngClass]="{
+            'is-invalid':nome.invalid && (nome.dirty || nome.touched),
+            'is-valid':nome.valid && (nome.dirty || nome.touched)
+           }"
+           [(ngModel)]="usuario.nome"
+           #nome="ngModel"
+           required />
+
+    <label for="inputSobrenome" class="sr-only">Sobrenome</label>
+    <input type="text" id="inputSobrenome"
+           name="sobrenome" placeholder="Sobrenome"
+           class="form-control mb-2"
+           [ngClass]="{
+            'is-invalid':sobrenome.invalid && (sobrenome.dirty || sobrenome.touched),
+            'is-valid':sobrenome.valid && (sobrenome.dirty || sobrenome.touched)
+           }"
+           [(ngModel)]="usuario.sobreNome"
+           #sobrenome="ngModel"
+           required />
 
     <label for="inputEmail" class="sr-only">Email</label>
     <input type="email" id="inputEmail"
-           name="email" placeholder="Informe o seu Email"
+           name="email" placeholder="Email"
            class="form-control mb-2"
            [ngClass]="{
             'is-invalid':email.invalid && (email.dirty || email.touched),
@@ -22,18 +46,17 @@
            class="form-control mb-2"
            #senha="ngModel"
            [(ngModel)]="usuario.senha"
-           senha
            [ngClass]="{
             'is-invalid':senha.invalid && (senha.dirty || senha.touched),
             'is-valid':senha.valid && (senha.dirty || senha.touched)
            }"
            required />
 
-    <button class="btn btn-primary btn-block mb-2" type="submit" (click)="entrar()" [disabled]="ativar_spinner">
+    <button class="btn btn-primary btn-block mb-2" type="submit" (click)="cadastrar()" [disabled]="ativar_spinner">
       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="ativar_spinner"></span>
-      Entrar
+      Cadastrar
     </button>
-    <div>Novo por aqui? <a [routerLink]='["/novo-usuario"]'>Cadastre-se</a></div>
+    <div><a [routerLink]='["/entrar"]'>Voltar</a></div>
     <div class="alert alert-danger" *ngIf="mensagem">
       {{mensagem}}
     </div>
