--- a/QuickBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -23,9 +23,16 @@
           <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="!usuarioLogado()">
             <a class="nav-link text-dark" [routerLink]='["/entrar"]'>Entrar</a>
           </li>
-          <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="usuarioLogado()">
-            <a class="nav-item nav-link text-dark" [routerLink]='["/sair"]' (click)="sair()">Sair</a>
+          <li class="nav-item dropdown" *ngIf="usuarioLogado()">
+            <a class="nav-link dropdown-toogle" role="button" aria-haspopup="true" href="#"
+               aria-expanded="false" id="linkMenu" data-toggle="dropdown">{{usuario.nome}}</a>
+            <ul class="dropdown-menu" aria-labelledby="linkMenu">
+              <li class="dropdown-item" role="menu" [routerLink]='["/sair"]' (click)="sair()">Sair</li>
+            </ul>
           </li>
+          <!--<li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="usuarioLogado()">
+            <a class="nav-item nav-link text-dark" [routerLink]='["/sair"]' (click)="sair()">Sair</a>
+          </li>-->
           <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="temItensCarrinhoCompra() && usuarioLogado()">
             <a class="nav-link text-dark" [routerLink]='["/loja-efetivar"]'>
               <img src="assets/img/shopping-06-512.png" style="width:32px;height:32px" />
