--- a/QuickBuy.Web/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
@@ -10,7 +10,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let p of produtos">
+          <tr *ngFor="let p of produtos;let i = index">
             <td style="width:10%"><img src="..\..\..\..\..\arquivos\{{p.nomeArquivo}}" style="width:70%;height:10%" /></td>
             <td style="width:50%">{{p.descricao}}</td>
             <td style="width:10%">
@@ -18,17 +18,17 @@
                      [(ngModel)]="p.quantidade" placeholder="1"/>
             </td>
             <td style="width:20%">R$ {{p.preco | number: '1.0-2'}}</td>
-            <td style="width:10%"><button class="btn btn-secondary btn-sm" (click)="remover(p)">Remover</button></td>
+            <td style="width:10%"><button class="btn btn-secondary btn-sm" (click)="remover(i,p)">Remover</button></td>
           </tr>
         </tbody>
       </table>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-2">
       <div class="row">
         <div class="card" style="width:100%">
           <div class="card-header">Resumo</div>
           <div class="card-body">
-            <div class="card-title mb-4"><strong>Total</strong></div>
+            <div class="card-title mb-2"><strong>Total</strong></div>
             <p class="card-text"><strong>R$ {{total | number:'1.0-2'}}</strong></p>
             <button class="btn btn-danger" style="width:100%" (click)="efetivarCompra()">Efetivar Compra</button>
           </div>
