updating pedidos list and improviments

--- a/QuickBuy.Web/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
@@ -28,8 +28,8 @@
         <div class="card" style="width:100%">
           <div class="card-header">Resumo</div>
           <div class="card-body">
-            <div class="card-title mb-2"><strong>Total</strong></div>
-            <p class="card-text"><strong>R$ {{total | number:'1.0-2'}}</strong></p>
+            <div class="card-title mb-2" style="color:#666;"><strong>Total</strong></div>
+            <p class="card-text" style="color:#666;"><strong>R$ {{total | number:'1.0-2'}}</strong></p>
             <button class="btn btn-danger" style="width:100%" (click)="efetivarCompra()">Efetivar Compra</button>
           </div>
         </div>
