--- a/QuickBuy.Web/ClientApp/src/app/produto/produto.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/produto/produto.component.html
@@ -66,11 +66,11 @@
 </div>
 
 <div class="form-inline">
-  <button class="btn btn-primary" style="margin-right:4px;" (click)="cadastrar()" [disabled]="ativar_spinner">
+  <button class="btn btn-primary" style="margin-right:4px; width:100px;" (click)="cadastrar()" [disabled]="ativar_spinner">
     <span class="spinner-border spinner-border-sm" *ngIf="ativar_spinner"></span>
-    Cadastrar
+    Salvar
   </button>
-  <button class="btn btn-secondary" [routerLink]="['/pesquisar-produto']">Cancelar</button>
+  <button class="btn btn-secondary" style="width:100px;" [routerLink]="['/pesquisar-produto']">Cancelar</button>
 </div>
 
 <div class="alert alert-danger col-md-4" *ngIf="mensagem">
