--- a/QuickBuy.Web/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/loja/efetivar/loja.efetivar.component.html
@@ -17,7 +17,7 @@
               <input type="number" class="form-control" value="1" (change)="atualizarPreco(p, $event.target.value)"
                      [(ngModel)]="p.quantidade" placeholder="1"/>
             </td>
-            <td style="width:20%">R$ {{p.preco | number: '1.0-2'}}</td>
+            <td style="width:20%">{{p.preco | currency:'BRL':'symbol':'0.2':'pt'}}</td>
             <td style="width:10%"><button class="btn btn-secondary btn-sm" (click)="remover(i,p)">Remover</button></td>
           </tr>
         </tbody>
@@ -29,7 +29,7 @@
           <div class="card-header">Resumo</div>
           <div class="card-body">
             <div class="card-title mb-2" style="color:#666;"><strong>Total</strong></div>
-            <p class="card-text" style="color:#666;"><strong>R$ {{total | number:'1.0-2'}}</strong></p>
+            <p class="card-text" style="color:#666;"><strong>{{total | currency:'BRL':'symbol':'0.2':'pt'}}</strong></p>
             <button class="btn btn-danger" style="width:100%" (click)="efetivarCompra()">Efetivar Compra</button>
           </div>
         </div>
