--- a/QuickBuy.Web/ClientApp/src/app/loja/pesquisa/loja.pesquisa.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/loja/pesquisa/loja.pesquisa.component.html
@@ -9,7 +9,7 @@
                style="width:200px; height:200px;" />
           <div class="card-body">
             <div class="card-text">{{p.descricao | truncate: 40}}</div>
-            <h5 class="h5">R$ {{p.preco}}</h5>
+            <h5 class="h5">{{p.preco | currency:'BRL':'symbol':'0.2':'pt'}}</h5>
           </div>
         </div>
       </a>
