--- a/QuickBuy.Web/ClientApp/src/app/produto/produto.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/produto/produto.component.html
@@ -42,7 +42,7 @@
 
 <label for="inputPreco" class="sr-only">Preço</label>
 <input type="number" id="inputPreco"
-       name="precoProduto"
+       name="precoProduto" mask="0.000,00"
        placeholder="Preço"
        class="form-control mb-2 col-md-2"
        [ngClass]="{
