--- a/QuickBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/QuickBuy.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -18,7 +18,10 @@
             <a class="nav-link text-dark" [routerLink]='["/fetch-data"]'>Fetch data</a>
           </li>-->
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
-            <a class="nav-link text-dark" [routerLink]='["/pesquisar-produto"]'>Produto</a>
+            <a class="nav-link text-dark" [routerLink]='["/pesquisar-produto"]'>Produtos</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="usuarioLogado()">
+            <a class="nav-link text-dark" [routerLink]='["/loja-pedidos"]'>Pedidos</a>
           </li>
           <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="!usuarioLogado()">
             <a class="nav-link text-dark" [routerLink]='["/entrar"]'>Entrar</a>
